# bolice

./: .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  restart.sh
.github/workflows/: build.yaml  dockerize.yml
app/: bot.py  broker.py  config.py  db.py  hash.py  main.py  utils.py
app/bot/: common.py  parse.py  punish.py  search.py  users.py
app/telegram/: main.py
app/tests/: test_hash.py
scraper/: Dockerfile  main.py  pyproject.toml
