[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Daniil Marichuk <danmarichuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
Pyrogram = "^2.0.106"
TgCrypto = "^1.2.5"
redis = "^4.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
